update hours for covid

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </nav>		<!-- COVID-19 Banner -->
 		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
-            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays and Saturdays from 8am - Noon and 4-7pm, and Sundays 8am - Noon.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
+            <strong>COVID-19 Hours Update:</strong> During the crisis, we have decided to remain open Fridays: 8am - 12pm; 4pm - 7pm, Saturdays: 7am - 12pm, and Sundays: 7am - 12pm.</br>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
@@ -82,9 +82,10 @@
 							
 							<!-- COVID-19 Hours -->
 							<h3 class="header-title">Hours (Updated for COVID-19)</h3>
-							<p>Friday: 8am - Noon; 4pm - 7pm</p>
-							<p>Saturday: 8am - Noon; 4pm - 7pm</p>
-							<p>Sunday: 8am - Noon</p>
+							<p>Friday: 8am - 12pm; 4pm - 7pm</p>
+							<p>Saturday: 7am - 12pm</p>
+							<p>Sunday: 7am - 12pm</p>
+							<p>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.</p>
 							
                             <!--<h3 class="header-title">Hours</h3>
 							<p>Mon - Thurs: 5am to 2pm</p>
