--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </nav>		<!-- COVID-19 Banner -->
 		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
-            <strong>COVID-19 Hours Update: </strong>During the crisis, we have decided to remain open Fridays: 8am - 12pm; 4pm - 8pm, Saturdays: 7am - 12pm, and Sundays: 7am - 12pm.<br/>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
+            <strong>COVID-19 Hours Update: </strong>During the crisis, we have decided to remain open Mondays: 7am - 12pm, Thursdays: 7am - 12pm, Fridays: 7am - 8pm, Saturdays and Sundays: 7am - 12pm<br/>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
@@ -82,7 +82,11 @@
 							
 							<!-- COVID-19 Hours -->
 							<h3 class="header-title">Hours (Updated for COVID-19)</h3>
-							<p>Friday: 8am - 12pm; 4pm - 8pm</p>
+							<p>Monday: 7am - 12pm</p>
+							<p>Tuesday: Closed</p>
+							<p>Wednesday: Closed</p>
+							<p>Thursday: 7am - 12pm</p>
+							<p>Friday: 7am - 8pm</p>
 							<p>Saturday: 7am - 12pm</p>
 							<p>Sunday: 7am - 12pm</p>
 							<p>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.</p>
