--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </head>
     <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
         <div class="probootstrap-loader"></div>
+		<p class="top-banner">"#1 Best BBQ in Rhode Island! Johnny's Victory Diner has become exactly the sort of thing you would hope to find in a place like Rhode Island" - Food & Wine Magazine, September 2020</p>
         <!-- END loader -->
         <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
             <div class="container">
@@ -82,14 +83,14 @@
 							
 							<!-- COVID-19 Hours -->
 							<h3 class="header-title">Hours (Updated for COVID-19)</h3>
-							<p>Monday: 7am - 12pm</p>
-							<p>Tuesday: Closed</p>
-							<p>Wednesday: Closed</p>
-							<p>Thursday: 7am - 12pm</p>
-							<p>Friday: 7am - 8pm</p>
-							<p>Saturday: 7am - 12pm</p>
-							<p>Sunday: 7am - 12pm</p>
-							<p>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.</p>
+							<p class="hours">Monday: 7am - 12pm</p>
+							<p class="hours">Tuesday: Closed</p>
+							<p class="hours">Wednesday: Closed</p>
+							<p class="hours">Thursday: 7am - 12pm</p>
+							<p class="hours">Friday: 7am - 8pm</p>
+							<p class="hours">Saturday: 7am - 12pm</p>
+							<p class="hours">Sunday: 7am - 12pm</p>
+							<p class="description">Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.</p>
 							
                             <!--<h3 class="header-title">Hours</h3>
 							<p>Mon - Thurs: 5am to 2pm</p>
