make the quote bold and italicized

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </head>
     <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
         <div class="probootstrap-loader"></div>
-		<p class="top-banner">"#1 Best BBQ in Rhode Island! Johnny's Victory Diner has become exactly the sort of thing you would hope to find in a place like Rhode Island" - Food & Wine Magazine, September 2020</p>
+		<p class="top-banner"><span class="banner-quote">"#1 Best BBQ in Rhode Island! Johnny's Victory Diner has become exactly the sort of thing you would hope to find in a place like Rhode Island"</span> - Food & Wine Magazine, September 2020</p>
         <!-- END loader -->
         <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
             <div class="container">
