--- a/index.html
+++ b/index.html
@@ -59,13 +59,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>		<!-- COVID-19 Banner -->
-		<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
-            <strong>COVID-19 Hours Update: </strong>During the crisis, we have decided to remain open Mondays: 7am - 12pm, Thursdays: 7am - 12pm, Fridays: 7am - 8pm, Saturdays and Sundays: 7am - 12pm<br/>Please note that BBQ will be served on Friday nights going forward along with our fish menu and weekly specials.<br/>Online ordering now available! Place your order online <strong><u><a href="https://www.toasttab.com/johnnys-victory-diner/v3">Here</a></u></strong> or call 401-765-2661.<br/>Please check our our <strong><u><a href="https://www.facebook.com/johnnysvictorydiner/">Facebook Page</a></u></strong> for our updated menu and weekly specials.<br/>Thank you for your continued support through these difficult times. Stay safe.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
+        </nav>
 		
         <!-- END nav -->
         <section class="pb_cover_v1 cover-bg-black cover-bg-opacity-4 text-center" style="background-image: url(assets/images/restaurant/1900x1200/img_1.jpg)" id="section-home">
@@ -75,9 +69,10 @@
                         <h2 class="heading mb-3">Johnny&#039;s Victory Diner</h2>
                         <div class="sub-heading">
                             <p class="mb-5">
+							<br/>
                             <h3 class="header-title">Our little slice of heaven</h3>
                             <p class="description">Welcome to Johnny’s! Our little diner has been in the same location since the 30’s … We take great pride in making sure your breakfast, lunch or dinner is served fresh, hot, and with all the love and care your momma used to make it with. Our food is scratch-made, homemade, and housemade every day - fresh, never frozen. Our head cook has been with us for 18 years, making fresh soups and meals she learned from her mother years ago.
-                                From Memorial Day to Labor Day, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
+                                From Memorial Day until it gets cold, we serve real southern BBQ on Friday nights until 8 pm. Our Pitmaster learned from the great Myron Mixon (look him up, he’s pretty famous!) and will prepare everything from baby back ribs to 12-hour brisket, pulled pork to smoked chicken wings - all flavored with the sweet taste of apple and oak wood, low ‘n slow like it should be. We have all your favorite southern sides too – cornbread, pit beans, mac ‘n cheese, and cole slaw.
                                 Come on in, get to know our friendly staff and become part of the family.
                             </p>
 							
