--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
                         </div>
                         <div class="card border-0" id="event2">
                         </div>
-                        <div class="card border-0" id="event3">
-                        </div>
+                        <!--<div class="card border-0" id="event3">
+                        </div>-->
                     </div>
                 </div>
             </div>
