--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                 <div class="collapse navbar-collapse justify-content-md-center" id="probootstrap-navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-home">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-menu">Menu</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="https://www.toasttab.com/johnnys-victory-diner/v3">Order Online</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-contact">Contact</a></li>
                         <li class="nav-item logo-center d-xl-block d-lg-block d-md-none d-sm-none d-none">
@@ -54,7 +53,6 @@
                         </li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-gallery">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-catering">Catering</a></li>
-                        <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="https://www.toasttab.com/johnnys-victory-diner/giftcards">Gift Cards</a></li>
                         <li class="nav-item"><a class="nav-link text-uppercase pb_letter-spacing-2" href="#section-about">About</a></li>
                     </ul>
                 </div>
@@ -97,9 +95,9 @@
                             <p>Email: <a class="emailLink" href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
                             <p>Phone: (401)-765-2661</p>
                             </p>
-                            <p><a href="https://www.toasttab.com/johnnys-victory-diner/v3" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">Order Online</a></p>
+                            <p><a href="https://www.toasttab.com/johnnys-victory-diner/v3" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-20 pb_letter-spacing-2 p-3">Order Online</a></p>
                             <p><a href="https://www.toasttab.com/johnnys-victory-diner/giftcards" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">Gift Cards</a></p>
-                            <p><a href="#section-menu" role="button" class="btn smoothscroll pb_outline-light rounded-0 btn-xl pb_font-13 pb_letter-spacing-2 p-3">View our menu</a></p>
+							<br/>
                             </p>
                         </div>
                     </div>
@@ -124,13 +122,13 @@
                         <h2 class="mb-4 text-uppercase pb_letter-spacing-2">The Diner</h2>
                         <p>Located in scenic Burrillville RI, easily accessible from Route 295 or Route 146, you’ll find our home away from home. We’re open every day at 5 am, so stop in for a coffee and a hearty breakfast or lunch.</p>
                         <p>We promise you’ll leave with a full belly, some new friends, and a new favorite diner …</p>
-                        <p><a href="#section-menu" class="smoothscroll text-danger text-uppercase">See our menu <i class="ion-arrow-down-c"></i></a></p>
+                        <p><a href="#section-menu" class="smoothscroll text-danger text-uppercase" href="https://www.toasttab.com/johnnys-victory-diner/v3">Order Online</a></p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- END section -->
-        <section class="pb_section" id="section-menu">
+        <!--<section class="pb_section" id="section-menu">
             <div class="container">
 			    <div class="row justify-content-center mb-5">
                     <div class="col-md-10 text-center">
@@ -237,8 +235,8 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
-        </section>
+            <!--</div>
+        </section>-->
         <!-- END section -->
         <section class="pb_section" id="section-gallery">
             <div class="container">
@@ -392,6 +390,7 @@
                                         <br />
                                         <p>Email: <a href="mailto:johnnysbbqri@gmail.com">johnnysbbqri@gmail.com</a></p>
                                         <p>Phone: (401)-765-2661</p>
+										<p>Catering: (401)-601-5198
                                     </div>
                                     <br />
                                     <div class="col-md">
