--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <h2 class="mb-4 text-uppercase pb_letter-spacing-2">The Diner</h2>
                         <p>Located in scenic Burrillville RI, easily accessible from Route 295 or Route 146, you’ll find our home away from home. We’re open every day at 5 am, so stop in for a coffee and a hearty breakfast or lunch.</p>
                         <p>We promise you’ll leave with a full belly, some new friends, and a new favorite diner …</p>
-                        <p><a href="#section-menu" class="smoothscroll text-danger text-uppercase" href="https://www.toasttab.com/johnnys-victory-diner/v3">Order Online</a></p>
+                        <p><a class="smoothscroll text-danger text-uppercase" href="https://www.toasttab.com/johnnys-victory-diner/v3">Order Online</a></p>
                     </div>
                 </div>
             </div>
