Fix sizing on smaller screens

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
             </div>
         </section>
         <!-- END section -->
+		
+		<!-- About Section -->
         <section class="pb_section" id="section-about">
             <div class="container">
                 <div class="row">
