Add alert for vacation hours

--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                     </ul>
                 </div>
             </div>
+			
+			<!-- Vacation Banner -->
+			<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
+				<Strong>Notice:</strong> We will be closed from July 2nd - July 13th.
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
         </nav>
 		
         <!-- END nav -->
