--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             </div>
 			
 			<!-- Vacation Banner -->
-			<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
+			<!--<div class="fixed-top alert alert-warning alert-dismissible fade show" role="alert" id="underConstruction">
 				<Strong>Notice:</strong> We will be closed from July 2nd - July 13th.
 				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 				</button>
-			</div>
+			</div>-->
         </nav>
 		
         <!-- END nav -->
